--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,11 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>org.jrue.poc.springconfig.ApplicationContext</param-value>
 	</context-param>
+	
+	<context-param>
+		<param-name>spring.profiles.active</param-name>
+		<param-value>test</param-value>
+	</context-param>	
 		
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
