--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,6 +44,10 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<session-config>
+		<session-timeout>1</session-timeout>
+	</session-config>
+	
 	<error-page>
 		<error-code>403</error-code>
 		<location>/error/403</location>
@@ -53,4 +57,5 @@
 		<error-code>404</error-code>
 		<location>/error/404</location>
 	</error-page>
+
 </web-app>
