--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<jdk.version>1.8</jdk.version>
 		<mockito.version>1.10.8</mockito.version>
+		<javax.mail.version>1.4</javax.mail.version>
 	</properties>
 
 	<dependencies>
@@ -37,6 +38,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 		</dependency>
@@ -56,6 +62,10 @@
 			<artifactId>thymeleaf-extras-springsecurity3</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -67,6 +77,17 @@
 			<groupId>org.jrue.poc.persistenence</groupId>
 			<artifactId>springmybatis</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>${javax.mail.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
 		</dependency>
 
 	</dependencies>
